--- a/index.html
+++ b/index.html
@@ -3,54 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/styles.css" />
+    <title>My weather application</title>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="text" placeholder="Enter a city" required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <h1>Paris</h1>
-
-    <p>
-      Saturday 18:55, moderate rain
-      <br />
-      Humidity: 87%, Wind: 2,1 km/h
-    </p>
-    <div>☀️ 14°C</div>
-
-    <ul>
-      <li>
-        Sun 🌤️ <br />
-        <strong>14C°</strong> - 18C°
-      </li>
-      <li>
-        Sun 🌤️ <br />
-        <strong>14C°</strong> - 18C°
-      </li>
-      <li>
-        Sun 🌤️ <br />
-        <strong>14C°</strong> - 18C°
-      </li>
-      <li>
-        Sun 🌤️ <br />
-        <strong>14C°</strong> - 18C°
-      </li>
-      <li>
-        Sun 🌤️ <br />
-        <strong>14C°</strong> - 18C°
-      </li>
-    </ul>
-    <footer>
-      This project was coded by
-      <a
-        href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://de.linkedin.com/in/j-krieg&ved=2ahUKEwj-wYasjOaIAxX5hf0HHU4xJoIQFnoECCsQAQ&usg=AOvVaw0yU4rwanDhBCJgWnxE56Sh"
-        target="_blank"
-        >Julia Föhr</a
-      >
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form id="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+            class="search-input"
+            id="search-input"
+          />
+          <input type="submit" value="Search" class="search-button" />
+        </form>
+      </header>
+      <main>
+        <div class="current-weather">
+          <div>
+            <h1 class="current-city" id="current-city">Paris</h1>
+            <p class="current-details">
+              <span id="current-date"></span>, moderate rain <br />
+              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+            </p>
+          </div>
+          <div class="current-temperature">
+            <span class="current-temperature-icon">☀️</span
+            ><span class="current-temperature-value" id="temperature">24</span
+            ><span class="current-temperature-unit">°C</span>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <p>
+          This project was coded by
+          <a href="#" target="_blank">Matt Delac</a> and is
+          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="#" target="_blank">hosted on Netlify</a>
+        </p>
+      </footer>
+    </div>
   </body>
+  <script src="src/index.js"></script>
 </html>
