--- a/index.html
+++ b/index.html
@@ -46,9 +46,17 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Julia</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/bee60990" target="_blank">Julia</a> and is
+          <a
+            href="https://github.com/bee60990/SheCodesGit/tree/main/src"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://testing344523.netlify.app" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
